<resources>
    <string name="app_name">Заметки</string>
    <string name="noteEdit">Редактировать</string>
    <string name="noteDelete">Удалить</string>
    <string name="noteAdd">Добавить</string>
    <string name="cancel">Отменить</string>
    <string name="noteConfirm">Подтвердить</string>
    <string name="search">Поиск</string>
    <string name="etTitle">Заголовок заметки</string>
    <string name="etText">Текст заметки</string>
    <string name="ddLabelCat">Категория</string>
    <string name="ddLabelPrior">Приоритет</string>
</resources>