<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="780dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/etTitle"
        android:maxLines="1"
        android:textSize="16sp"
        android:textAppearance="@font/roboto_regular"/>

    <EditText
        android:id="@+id/noteTextEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/etText"
        android:maxLines="11"
        android:textSize="16sp"
        android:textAppearance="@font/roboto_regular"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/noteTextEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textAppearance="@font/roboto_regular"
        android:hint="@string/ddLabelCat">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priority"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textAppearance="@font/roboto_regular"
        android:hint="@string/ddLabelPrior">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="148dp"
        android:layout_height="48dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/lightGreen"
        app:cardElevation="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmAdd"
        android:layout_width="148dp"
        android:layout_height="48dp"
        style="@style/AddStyle"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAppearance="@font/roboto_regular"
        android:text="@string/noteAdd"/>

    <androidx.cardview.widget.CardView
        android:layout_width="148dp"
        android:layout_height="48dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/lightRed"
        app:cardElevation="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelAdd"
        android:layout_width="148dp"
        android:layout_height="48dp"
        style="@style/DelStyle"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAppearance="@font/roboto_regular"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>